--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_platform_widgets: ^1.7.1
+  syncfusion_flutter_gauges: ^19.1.59
 
 dev_dependencies:
   flutter_test:
