--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_platform_widgets: ^1.7.1
   syncfusion_flutter_gauges: ^19.1.59
   location: ^4.1.1
+  circular_buffer: ^0.9.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
