--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   location: ^4.1.1
   circular_buffer: ^0.9.1
   intl: ^0.17.0
+  rxdart: ^0.27.0
 
 dev_dependencies:
   flutter_test:
