--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   circular_buffer: ^0.9.1
   intl: ^0.17.0
   rxdart: ^0.27.0
+  screen: ^0.0.5
+  geolocator: ^7.0.3
 
 dev_dependencies:
   flutter_test:
