--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   rxdart: ^0.27.0
   screen: ^0.0.5
   geolocator: ^7.0.3
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
